--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"electron": "^7.1.8",
 		"electron-packager": "^14.1.1",
 		"electron-window-manager": "^1.0.6",
+		"jquery": "^3.4.1",
 		"nodemon": "^2.0.2"
 	}
 }
