--- a/package.json
+++ b/package.json
@@ -1,22 +1,51 @@
 {
-	"name": "aiwcore",
-	"version": "1.0.0",
-	"description": "Aiw Software for AIW, Ferntech",
-	"main": "index.js",
-	"scripts": {
-		"start": "electron main",
-		"test": "node test",
-		"package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-		"package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Aiw Core App\"",
-		"package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
-	},
-	"author": "Shanewas Ahmed Nabil",
-	"license": "ISC",
-	"devDependencies": {
+  "name": "aiwcore",
+  "version": "0.1.0",
+  "description": "Aiw Software for AIW, Ferntech",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
 		"electron": "^7.1.8",
 		"electron-packager": "^14.1.1",
 		"electron-window-manager": "^1.0.6",
 		"jquery": "^3.4.1",
-		"nodemon": "^2.0.2"
-	}
+    "nodemon": "^2.0.2",
+    "react-scripts": "3.3.0"
+	},
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    
+    "electron": "electron .",
+
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+		"package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Aiw Core App\"",
+		"package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+	
+  },
+  "author": "Shanewas Ahmed Nabil",
+	"license": "ISC",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
